# deviceMLOps.MLAgent

./: LICENSE  README.md  meson.build  meson_options.txt  mlops-agent.mk
.ahub/tcchecker-tca/: config.yaml
.github/: CODEOWNERS
.github/workflows/: _typos.toml  mlops_agemt_testhub.yml  publish_docs.yml  tizen_gbs.yml  ubuntu_clang_native.yml  ubuntu_gcc_native.yml
daemon/: common.h  dbus-interface.h  gdbus-util.c  gdbus-util.h  log.h  main.c  meson.build  ml-agent-interface.c  ml-agent.pc.in  mlops-agent-android.c  mlops-agent-interface.c  mlops-agent-internal.c  mlops-agent-internal.h  mlops-agent-node.c  mlops-agent-node.h  mlops-agent.pc.in  model-dbus-impl.cc  modules.c  modules.h  pipeline-dbus-impl.cc  pkg-mgr.cc  pkg-mgr.h  resource-dbus-impl.cc  service-db-util.h  service-db.cc  service-db.hh
daemon/include/: meson.build  ml-agent-interface.h  mlops-agent-interface.h
dbus/: machine-learning-agent.conf.in  machine-learning-agent.service.in  meson.build  mlops-agent.service.in  model-dbus.xml  org.tizen.machinelearning.service.service.in
jni/: mlops-agent.mk
packaging/: machine-learning-agent.spec  mlops-agent.spec  run-unittest.sh
plugin-parser/: meson.build  mlops-plugin-parser.cc  mlops-plugin-parser.info.in
tests/: meson.build
tests/daemon/: meson.build  unittest_gdbus_util.cc  unittest_ml_agent.cc  unittest_mlops_agent.cc  unittest_service_db.cc
tests/dbus/: meson.build  test-dbus-impl.c  test-dbus-interface.h
tests/plugin-parser/: meson.build  unittest_mlops_plugin_parser.cc
tests/plugin-parser/test_rpk_samples/invalid_rpk/res/global/sample-res-type/: dummy  rpk_config.json
tests/plugin-parser/test_rpk_samples/working_rpk/res/global/sample-res-type/: dummy-global.tflite  rpk_config.json
tests/services/: meson.build  org.tizen.machinelearning.service.service.in
tool/doxybook/: Doxyfile.prj  book-doxygen-publish.sh
